--- a/example.html
+++ b/example.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/2.0.0/less.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <!-- example requires bootstrap-n-column.less to be compiled to styles.css -->
     <link rel="stylesheet" href="styles.css">        
 </head>
 <body>
